# Local-srt

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release-online-installer.yml
packaging/: LocalSRT.spec  app_entry.py  local_srt.iss  subtitle-worker.spec  worker_entry.py
packaging/online-installer/: Install-LocalSRT-Portable.cmd  Install-LocalSRT.cmd  Install-LocalSRT.ps1  README.md
scripts/: build_installer_exe.ps1  build_online_installer.ps1  build_windows.ps1  use_local_tools.ps1
src/local_srt/: __init__.py  app.py  captions.py  config.py  media.py  pipeline.py  qwen_backend.py  srt.py  worker.py
tests/: test_captions.py  test_config.py  test_pipeline.py  test_srt.py  test_worker.py
